# OMZ-Lab8

./: .gitignore  cabal.project  log.txt
Lab#8 - DICOM_fusion_8bits/Var2 - DICOM_8bits/: 3-t1.dcm  3-t2.dcm
OMZ-Lab8/: OMZ-Lab8.cabal
OMZ-Lab8/src/: App.hs  Coordinates.hs  Log.hs  Main.hs  OpenGLWidget.hs  Shaders.hs  Types.hs
OMZ-Lab8/src/Linear/: OpenGL.hs
shaders/: frag1.glsl  fragFusion.glsl  vert.glsl
